added waiting music