@@ -12,24 +12,32 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <javafx.version>22.0.1</javafx.version>
     </properties>
 
     <dependencies>
+        <!-- JavaFX modules -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>22.0.1</version>
+            <version>${javafx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>22.0.1</version>
+            <version>${javafx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-base</artifactId>
-            <version>22.0.1</version>
+            <version>${javafx.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-media</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+
         <!-- Dependencies for Unit Testing -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -48,17 +56,7 @@
             <artifactId>objenesis</artifactId>
             <version>3.2</version>
         </dependency>
-        <!-- JavaFX modules -->
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>17.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <version>17.0.1</version>
-        </dependency>
+
         <!-- Jzy3d dependency -->
         <dependency>
             <groupId>org.jzy3d</groupId>
@@ -70,7 +68,6 @@
             <artifactId>jzy3d-javafx</artifactId>
             <version>1.0.2</version>
         </dependency>
-
         <dependency>
             <groupId>org.jfree</groupId>
             <artifactId>org.jfree.chart3d.fx</artifactId>
@@ -86,6 +83,12 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>Main</mainClass>
+                    <options>
+                        <option>--module-path</option>
+                        <option>${java.home}/lib</option>
+                        <option>--add-modules</option>
+                        <option>javafx.controls,javafx.fxml,javafx.media</option>
+                    </options>
                 </configuration>
             </plugin>
             <plugin>
